Added user management module and fixed minor bugs in Dynamic API